@@ -485,12 +485,15 @@ compare_devices (const void *a, const void *b)
 {
   const struct device *left = (const struct device *) a;
   const struct device *right = (const struct device *) b;
-  int ret;
-  ret = strcmp (left->kernel, right->kernel);
-  if (ret)
-    return ret;
-  else
-    return strcmp (left->stable, right->stable);
+
+  if (left->kernel && right->kernel)
+    {
+      int ret = strcmp (left->kernel, right->kernel);
+      if (ret)
+	return ret;
+    }
+
+  return strcmp (left->stable, right->stable);
 }
 #endif /* __linux__ */
 
